modified migration file and added filters
